test/negative/type_create_enum_unsupported/Main.hx
enum Choice {
	One;
}

class Main {
	static function main():Void {
		Type.createEnum(Choice, "One");
	}
}
